--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "topthink/framework": "^5.0",
         "topthink/think-captcha": "^1.0",
         "topthink/think-worker": "^1.0",
-        "workerman/workerman-for-win": "^3.4"
+        "workerman/workerman-for-win": "^3.4",
+        "topthink/think-image": "^1.0"
     },
     "extra": {
         "think-path": "thinkphp"
